--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,225 @@
-asgiref==3.5.2
+aiohttp==3.7.4.post0
+apturl==0.5.2
+asgiref==3.3.4
+async-timeout==3.0.1
+attrs==21.2.0
 backports.zoneinfo==0.2.1
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
+bandit==1.7.0
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
+blinker==1.4
+boto3==1.17.105
+botocore==1.20.105
+Brlapi==0.7.0
+cached-property==1.5.1
+cachetools==4.2.2
+certifi==2020.12.5
+cffi==1.14.5
+cfgv==3.3.1
+chardet==4.0.0
+charset-normalizer==2.0.7
+chrome-gnome-shell==0.0.0
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==37.0.2
+cryptography==3.4.7
+cupshelpers==1.0
+cycler==0.10.0
+dbus-python==1.2.16
+decorator==4.4.2
+defer==1.0.6
 defusedxml==0.7.1
-Django==4.0.5
-django-cors-headers==3.13.0
-django-rest-framework==0.1.0
+Deprecated==1.2.12
+distlib==0.3.4
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==3.2.3
+django-binary-database-files==1.0.15
+django-bootstrap4==22.1
+django-cors-headers==3.8.0
+django-crontab==0.7.1
+django-debug-toolbar==3.4.0
+django-email-bandit==2.0
+django-environ==0.4.5
+django-filter==2.4.0
+django-google-auth==0.4.0
+django-googlecalendar==3.0.0
+django-js-asset==1.2.2
+django-mptt==0.12.0
+django-nose==1.4.7
+django-oauth-toolkit==1.5.0
+django-oauth2-provider==0.2.6.1
+django-pandas==0.6.4
+django-slack==5.16.2
+django-storages==1.11.1
 django-templated-mail==1.1.1
-djangorestframework==3.13.1
+django-webpack-loader==1.0.0
+djangorestframework==3.12.4
+djangorestframework-api-key==2.1.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
-idna==3.3
+dnspython==1.16.0
+docker==4.1.0
+docker-compose==1.25.0
+dockerpty==0.4.1
+docopt==0.6.2
+drf-extensions==0.7.1
+drf-yasg==1.20.0
+duplicity==0.8.12.0
+entrypoints==0.3
+ephem==3.7.7.1
+fasteners==0.14.1
+FeinCMS==1.20.0
+filelock==3.7.1
+flake8==4.0.1
+future==0.18.2
+gdata==2.0.18
+gitdb==4.0.7
+GitPython==3.1.17
+google-api-core==1.28.0
+google-api-python-client==2.5.0
+google-auth==1.30.1
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+googleapis-common-protos==1.53.0
+gpg===1.13.1-unknown
+html5lib==1.0.1
+httplib2==0.19.1
+identify==2.5.1
+idna==2.10
+importlib-metadata==4.8.2
+inflection==0.5.1
+install==1.3.4
 itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-oauthlib==3.2.0
-Pillow==9.1.1
-pycparser==2.21
-PyJWT==2.4.0
-python-dotenv==0.20.0
+Jinja2==3.0.1
+jmespath==0.10.0
+jsonschema==3.2.0
+jwcrypto==0.9.1
+keyring==18.0.1
+kiwisolver==1.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+LunarCalendar==0.0.9
+lxml==4.5.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.1.2
+mccabe==0.6.1
+monotonic==1.5
+more-itertools==4.2.0
+multidict==5.1.0
+mysql==0.0.3
+mysqlclient==2.0.3
+netifaces==0.10.4
+nodeenv==1.6.0
+nose==1.3.7
+numpy==1.22.4
+oauth2client==4.1.3
+oauthlib==3.1.0
+olefile==0.46
+openapi-codec==1.3.2
+packaging==20.9
+pandas==1.4.2
+paramiko==2.6.0
+pbr==5.6.0
+pep8==1.7.1
+pep8-naming==0.13.0
+pexpect==4.6.0
+Pillow==8.2.0
+platformdirs==2.5.2
+pre-commit==2.19.0
+protobuf==3.17.1
+proton-client==0.7.1
+protonvpn-cli==3.12.0
+protonvpn-gui==1.10.0
+protonvpn-nm-lib==3.11.0
+psutil==5.5.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.11
+pycairo==1.16.2
+pycodestyle==2.8.0
+pycparser==2.20
+pycrypto==2.6.1
+pycups==1.9.73
+pydocstyle==6.1.1
+pyflakes==2.4.0
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==2.1.0
+pymacaroons==0.13.0
+PyMySQL==1.0.2
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.7
+PyQt5==5.14.1
+PyQtWebEngine==5.14.0
+pyRFC3339==1.1
+pyrsistent==0.15.5
+python-apt==2.0.0+ubuntu0.20.4.7
+python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
+python-dotenv==0.19.1
+python-gnupg==0.4.5
 python3-openid==3.2.0
-pytz==2022.1
-requests==2.28.0
-requests-oauthlib==1.3.1
+pythondialog==3.4.0
+pytz==2021.1
+pyxdg==0.26
+PyYAML==5.4.1
+q==2.6
+reportlab==3.5.34
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.7.2
+ruamel.yaml==0.17.10
+ruamel.yaml.clib==0.2.4
+s3transfer==0.4.2
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+shortuuid==1.0.9
+simplejson==3.16.0
+sip==4.19.21
 six==1.16.0
+slack-bolt==1.11.1
+slack-sdk==3.13.0
+slackclient==2.9.3
+smmap==4.0.0
+snowballstemmer==2.2.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
-sqlparse==0.4.2
-stripe==3.3.0
-uritemplate==4.1.1
-urllib3==1.26.9
+soupsieve==1.9.5
+sqlparse==0.4.1
+stevedore==3.3.0
+stripe==3.4.0
+systemd-python==234
+texttable==1.6.2
+toml==0.10.2
+typing-extensions==3.10.0.0
+ubuntu-advantage-tools==27.8
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+Unidecode==1.3.4
+uritemplate==3.0.1
+urllib3==1.26.4
+usb-creator==0.3.7
+utils==1.0.1
+uuid==1.30
+uWSGI==2.0.19.1
+virtualenv==20.14.1
+wadllib==1.3.3
+webencodings==0.5.1
+websocket-client==0.53.0
+wrapt==1.12.1
+xkit==0.0.0
+yarl==1.6.3
+zipp==3.6.0
