--- a/frontend/public/netlify.toml
+++ b/frontend/public/netlify.toml
@@ -1,3 +1,9 @@
+[[redirects]]
+  from = "/api/*"
+  to = "https://gleaming-narwhal-31cfb9.netlify.app/:splat"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
 [[headers]]
   for = "/*"
   [headers.values]
