--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build:prod": "cross-env NODE_ENV=production API_URL='https://55cd-190-2-130-168.eu.ngrok.io/' npm build"
   },
   "dependencies": {
     "axios": "^0.27.2",
